--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>&#128169 האתר של מוריה &#128169&#128169</title>
-  </title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -50,7 +51,7 @@
 
     </tfoot>
   </table>
-<hr>
+  <hr>
   <h3>Skills</h3>
   <table cellspacing='10'>
     <tr>
